# motion-planning-Fetch

./: README.md
ws_moveit/: README.txt
ws_moveit/devel/: .catkin  .rosinstall
ws_moveit/devel/lib/: libchomp_planner_plugin.so.1.1.1  libcollision_detector_bullet_plugin.so.1.1.1  libcollision_detector_fcl_plugin.so.1.1.1  libgeometric_shapes.so.0.7.2  libmoveit_background_processing.so.1.1.1  libmoveit_cached_ik_kinematics_base.so.1.1.1  libmoveit_cached_ik_kinematics_plugin.so.1.1.1  libmoveit_chomp_optimizer_adapter.so.1.1.1  libmoveit_collision_detection.so.1.1.1  libmoveit_collision_detection_bullet.so.1.1.1  libmoveit_collision_detection_fcl.so.1.1.1  libmoveit_cpp.so.1.1.1  (+76 more)
ws_moveit/src/: .rosinstall
ws_moveit/src/fetch_april20_moveit_config/: .setup_assistant  CMakeLists.txt  fetch_robot.urdf
ws_moveit/src/fetch_april20_moveit_config/config/: fake_controllers.yaml  fetch.srdf  ompl_planning.yaml  ros_controllers.yaml
ws_moveit/src/fetch_april20_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_2.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  fetch_moveit_controller_manager.launch.xml  fetch_nav.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simulation.launch  trajectory_execution.launch.xml  warehouse.launch
ws_moveit/src/fetch_april20_moveit_config/launch/include/: fetch.launch.xml
(+486 files in other folders)
